# research-ux-jobs

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  Dockerfile  README.md  bot_app.py  config.py  database.py  gen_hirify_cookies.py  main.py  nixpacks.toml  preview_hirify.py  pyproject.toml  railway.json  scheduler.py
bot/: __init__.py  alerts.py  handlers.py  moderator.py  poster.py  templates.py  tg_api.py
docs/: codebase_graph.mmd  presentation.html
exporters/: sheets.py
filters/: __init__.py  dedup.py  stopwords.py
migrations/: 001_vacancy_scores.sql  002_add_model_tracking.sql  003_add_post_enrichment.sql  004_add_brand_data.sql  005_index_lower_title_company.sql
parsers/: __init__.py  _ats_tokens.py  adzuna.py  arbeitnow.py  ashby.py  bamboohr.py  base.py  bebee.py  cryptojobslist.py  designproject.py  fourdayjob.py  greenhouse.py  hh.py  himalayas.py  hirify.py  jobgether.py  lever.py  remotefirstjobs.py  remoteok.py  remotive.py  smartrecruiters.py  telegram.py  userinterviews.py  uxwork.py  wantapply.py  weworkremotely.py  workingnomads.py
scoring/: __init__.py  brand_scorer.py  eval_runner.py  llm_scorer.py  models.py  pre_filter.py  score_combiner.py  tier_mapper.py  validator.py
scripts/: export_all.py  gen_tg_session.py  preview_batch.py  preview_post.py  preview_score.py  test_score.py
tests/: smoke_test.py  test_ats_tokens.py  test_scoring.py
tools/: ats_harvest.py  ats_night_probe.py  compare_scorers.py  discover_ats_by_name.py  discover_ats_from_globalwork.py  discover_ats_from_repo.py  visa_sponsors_scrape.py
(+11 files in other folders)
